[package]
name = "blind_sig_bench"
version = "0.1.0"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.8"
curve25519-dalek = "2.1"
digest = { version = "0.8", default-features = false }
lazy_static = "1.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_all"
path = "benches/bench_all.rs"
harness = false
