[package]
name = "blind_sig_bench"
version = "0.1.0"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.8"
curve25519-dalek = "2.1"
digest = { version = "0.8", default-features = false }
lazy_static = "1.4"
plotters = "0.2"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gnuplot = "0.0.37"

[dev-dependencies]
criterion = "0.3"
threadpool = "1.0"

[[bench]]
name = "bench_all"
path = "benches/bench_all.rs"
harness = false

[[bin]]
name = "plot"
path = "src/plot.rs"
bench = false
test = false
